cmake_minimum_required (VERSION 2.6)
project (the_cpp_part)
include_directories(.)
add_library(MyClassLibrary STATIC ClassWithArgument.cpp ClassWithArgument.h ClassWithZeroArgument.cpp ClassWithZeroArgument.h)
add_executable (main main.cpp)
target_link_libraries (main LINK_PUBLIC MyClassLibrary)
set_target_properties(MyClassLibrary PROPERTIES POSITION_INDEPENDENT_CODE ON)   